# codex-hud

./: .gitignore  .releaserc.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.de.md  README.es.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.th.md  README.tr.md  README.vi.md  README.zh-CN.md  README.zh-TW.md  app.js  index.html  install.sh  package-lock.json  package.json  sitemap.xml  styles.css
.agents/: session-state.json
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml  claude.yml  pages.yml  release.yml
plugins/codex-hud/.codex-plugin/: plugin.json
plugins/codex-hud/scripts/: codex-hud.js
plugins/codex-hud/skills/codex-hud/: SKILL.md
rust/: Cargo.toml
rust/src/: collect.rs  colors.rs  compat.rs  hudcfg.rs  js.rs  main.rs  render.rs  util.rs
scripts/: check-readme-i18n.js  check-site.js  generate-images.mjs  install-patched-codex.js  measure-rust-hud.js  sync-release-version.js  test-codex-hud-config.js  test-codex-hud.js  test-golden.js  test-parity.js  test-parsing-golden.js  test-patched-codex-installer.js  test-readme-i18n.js  test-rust-cli.js  test-rust-golden.js  test-rust-parsing-golden.js  test-sync-release-version.js  vendor-toml.js
scripts/golden/: collect-parsing.golden  hud-output.golden
site/: CNAME  app.js  index.html  manifest.webmanifest  robots.txt  sitemap.xml  styles.css
spec/: config-schema.md
