[package]
name = "codex-hud"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Rust port of the codex-hud renderer (golden-parity with the Node oracle)."

[[bin]]
name = "codex-hud-rs"
path = "src/main.rs"

[dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
