[package]
name = "codex-hud"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Rust renderer for Codex HUD."

[[bin]]
name = "codex-hud"
path = "src/main.rs"

[dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
